--- a/eywa/merge_ci/rr-cache/d0b4a88302e2e9fae0169cec0ac3912d8c2b5c49/thisimage.1
+++ b/eywa/merge_ci/rr-cache/d0b4a88302e2e9fae0169cec0ac3912d8c2b5c49/thisimage.1
@@ -1065,6 +1065,10 @@ void get_cpu_cap(struct cpuinfo_x86 *c)
 		c->x86_capability[CPUID_D_1_EAX] = eax;
 	}
 
+	/* Additional Intel-defined SGX flags: level 0x00000012 */
+	if (c->cpuid_level >= 0x00000012)
+		c->x86_capability[CPUID_12_EAX] = cpuid_eax(0x00000012);
+
 	if (c->cpuid_level >= 0x0000001a) {
 		if (cpu_has(c, X86_FEATURE_HYBRID_CPU)) {
 			cpuid_count(0x0000001a, 0, &eax, &ebx, &ecx, &edx);
